# ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēó ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēó‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēó ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēó
# ‚Ėą‚Ėą‚ēĒ‚ēź‚ēź‚Ėą‚Ėą‚ēó‚Ėą‚Ėą‚ēĒ‚ēź‚ēź‚ēź‚ēź‚ēĚ‚Ėą‚Ėą‚ēĒ‚ēź‚ēź‚Ėą‚Ėą‚ēó‚Ėą‚Ėą‚ēĒ‚ēź‚ēź‚ēź‚ēź‚ēĚ
# ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēĒ‚ēĚ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēó  ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēĒ‚ēĚ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēó
# ‚Ėą‚Ėą‚ēĒ‚ēź‚ēź‚Ėą‚Ėą‚ēó‚Ėą‚Ėą‚ēĒ‚ēź‚ēź‚ēĚ  ‚Ėą‚Ėą‚ēĒ‚ēź‚ēź‚ēź‚ēĚ ‚ēö‚ēź‚ēź‚ēź‚ēź‚Ėą‚Ėą‚ēĎ
# ‚Ėą‚Ėą‚ēĎ  ‚Ėą‚Ėą‚ēĎ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēó‚Ėą‚Ėą‚ēĎ     ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēĎ
# ‚ēö‚ēź‚ēĚ  ‚ēö‚ēź‚ēĚ‚ēö‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēĚ‚ēö‚ēź‚ēĚ     ‚ēö‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēĚ
#‚ēĒ‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēó
#‚ēĎ Rust Efficiency & Performance ‚ēĎ
#‚ēö‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēĚ
[package]
name    = "lsm-db"
version = "0.7.0"

# Minimum Supported Rust Version (MSRV)
rust-version = "1.85"
edition = "2024"

# License
license = "Apache-2.0 OR MIT"

# Readme
readme = "README.md"

# Description
description = "Log-structured merge-tree storage engine for Rust. Memtable, leveled SSTables, background compaction, and bloom-filtered point reads over a durable wal-db log. A composable storage engine for embedded databases and Hive DB."

# Keywords (5 max)
keywords = [
    "lsm-tree",
    "storage-engine",
    "database",
    "compaction",
    "key-value"
]

# Categories
categories = [
    "database-implementations",
    "data-structures",
    "filesystem"
]

# Links
homepage      = "https://github.com/jamesgober/lsm-db"
repository    = "https://github.com/jamesgober/lsm-db"
documentation = "https://docs.rs/lsm-db"

# Authors
authors = [
    "James Gober <me@jamesgober.com>"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "lsm_db"
path = "src/lib.rs"

# `loom` is a custom cfg set via `RUSTFLAGS="--cfg loom"` for the concurrency
# model checks; it is declared here to satisfy the `unexpected_cfgs` lint under
# `-D warnings`.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }


# FEATURE FLAGS
# #################################
[features]
default = ["std"]
# Standard library.
std = []
# Crash-safe memtable durability via `wal-db`.
durability = ["dep:wal-db"]
# Bloom-filtered SSTable point lookups: a per-run filter (persisted in a
# sidecar file via `postcard`) lets a point read skip any run that cannot
# contain the key.
bloom = ["dep:bloom-lib", "dep:postcard"]
# On-disk record framing via `pack-io`.
framing = ["dep:pack-io"]


# DEPENDENCIES
# #################################
[dependencies]
# Domain error type. Portfolio crates standardise on `error-forge` for stable
# error metadata (kind/caption/is_fatal) instead of thiserror/anyhow. Default
# features are off ‚ÄĒ only the `ForgeError` trait is needed.
error-forge = { version = "1.0", default-features = false }

# Hardware-accelerated CRC32C (Castagnoli) for sorted-run integrity: per-block
# and index checksums in the on-disk format. Uses the SSE4.2 `crc32` instruction
# on x86_64 and the CRC extension on aarch64, with a software fallback. Same
# choice as `wal-db`; rolling it by hand would re-implement the intrinsics with
# no upside.
crc32c = "0.6"

# First-party primitives, each behind its own additive feature flag. They are
# wired here so the public surface and CI matrix stay stable as the matching
# milestones land them: durability (0.4), framing (0.4), bloom (0.5).
wal-db    = { version = "1.0", optional = true, default-features = false }
# `serde` so a built filter can be persisted to / loaded from its sidecar; the
# default hasher is fixed-seed, so a reloaded filter answers identically.
bloom-lib = { version = "1.0", optional = true, default-features = false, features = ["std", "serde"] }
pack-io   = { version = "1.0", optional = true, default-features = false }

# Compact, no_std, serde-based codec for the bloom-filter sidecar files. Pulled
# only by the `bloom` feature.
postcard  = { version = "1", optional = true, default-features = false, features = ["alloc"] }


# DEV DEPENDENCIES
# #################################
[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest  = "1"
tempfile  = "3"
# Comparative benchmark only (`benches/comparison.rs`): two mature pure-Rust
# embedded key-value stores to measure lsm-db against. Dev-only ‚ÄĒ never part of
# the published dependency graph.
sled      = "0.34"
redb      = "2"

[target.'cfg(loom)'.dev-dependencies]
loom = "0.7"


# EXAMPLES
# #################################
# Most examples use only the default surface and are auto-discovered. These two
# demonstrate feature-gated behaviour, so they require their feature to build.
[[example]]
name              = "durable_store"
required-features = ["durability"]

[[example]]
name              = "bloom_point_reads"
required-features = ["bloom"]


# BENCHMARKS
# #################################
[[bench]]
name    = "lsm_bench"
harness = false

[[bench]]
name    = "comparison"
harness = false


# RELEASE PROFILE
# #################################
[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = "symbols"
